--- a/src/app/components/movie-tree/movie-tree.component.scss
+++ b/src/app/components/movie-tree/movie-tree.component.scss
@@ -7,6 +7,14 @@
         display: flex;
         flex-direction: column;
         width: 10rem;
+
+        &.input{
+            font-size: 10px;
+            border-radius: 9px;
+            padding: 8px;
+            margin-bottom: 16px;
+            border: 1px solid var(--app-font-white-grey-color);
+        }
     }
 
     &__body{
