--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,4 +1,4 @@
 <a [routerLink]="['/']">
-    <h1>Library</h1>
+    <h1>Catalogue Library</h1>
 </a>
 <a class="button fancy-button"><i class="material-icons">logout</i>Logout</a>
