--- a/src/colors/colors.scss
+++ b/src/colors/colors.scss
@@ -12,4 +12,5 @@
     --app-orange-color: #f97316;
     --app-red-color: #fe6368;
     --app-blue-color: #1976d2;
+    --app-blue-background-color: #83b9eff7;
 }
