--- a/src/app/components/movie-tree-dialog/movie-tree-dialog.component.html
+++ b/src/app/components/movie-tree-dialog/movie-tree-dialog.component.html
@@ -1,4 +1,7 @@
 <div class="movie-tree-dialog">
-    {{data.nodeName}}
-    <i class="material-icons">{{data.icon}}</i>
+    <img src="https://picsum.photos/200" alt="nodePhoto" class="movie-tree-dialog__photo">
+    <div class="movie-tree-dialog__props">
+        {{data.nodeName}}
+        <i class="material-icons">{{data.icon}}</i>
+    </div>
 </div>
