--- a/src/app/components/movie-tree-node/movie-tree-node.component.scss
+++ b/src/app/components/movie-tree-node/movie-tree-node.component.scss
@@ -1,19 +1,39 @@
 .movie-tree-node{
     display: flex;
-    padding-left: 2rem;
     flex-direction: column;
+    gap: 1rem;
 
     &__node-content{
         display: flex;
         align-items: center;
-        gap: 0.4rem;
+        gap: 0.8rem;
+        background-color: var(--app-font-white-pure-color);
+        width: fit-content;
+        border-radius: 10px;
+        padding: 0.3rem;
 
         .material-icons{
+            
+            &:hover:first-of-type{
+                color: var(--app-blue-color);
+                cursor: pointer;
+            }
+        }
+
+        &__name{
             cursor: pointer;
+            &:hover{
+                text-decoration: underline;
+                color: var(--app-blue-color);
+            }
         }
     }
 
     &__node-children{
-        padding-left: 2rem; 
+        padding-left: 1rem; 
+        display: flex;
+        flex-direction: column;
+        gap: 0.4rem;
+        color: var(--app-font-white-pure-color);
     } 
 }
