--- a/src/app/components/movie-tree/movie-tree.component.scss
+++ b/src/app/components/movie-tree/movie-tree.component.scss
@@ -1,19 +1,21 @@
 .movie-tree{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.6rem;
 
     &__top{
-        display: flex;
-        flex-direction: column;
         width: 10rem;
+        font-size: 13px;
+        border-radius: 10px;
+        padding: 12px;
+        margin-bottom: 16px;
+        border: 1px solid var(--app-font-white-pure-color);
+        color: var(--app-font-grey-color);
 
-        &.input{
-            font-size: 10px;
-            border-radius: 9px;
-            padding: 8px;
-            margin-bottom: 16px;
-            border: 1px solid var(--app-font-white-grey-color);
+        :focus-visible :focus{
+            outline: none !important;
+            border: none !important;
+            box-shadow: none !important;
         }
     }
 
