--- a/src/app/components/movie-tree-node/movie-tree-node.component.scss
+++ b/src/app/components/movie-tree-node/movie-tree-node.component.scss
@@ -3,29 +3,38 @@
     flex-direction: column;
     gap: 1rem;
 
-    &__node-content{
+    &__group{
         display: flex;
-        align-items: center;
-        gap: 0.8rem;
-        background-color: var(--app-font-white-pure-color);
-        width: fit-content;
-        border-radius: 10px;
-        padding: 0.3rem;
+        gap: 0.4rem;
 
-        .material-icons{
-            
-            &:hover:first-of-type{
-                color: var(--app-blue-color);
+        &__node-content{
+            display: flex;
+            align-items: center;
+            gap: 0.8rem;
+            background-color: var(--app-font-white-pure-color);
+            width: fit-content;
+            border-radius: 10px;
+            padding: 0.3rem;
+    
+            .material-icons{
+                
+                &:hover:first-of-type{
+                    color: var(--app-blue-color);
+                    cursor: pointer;
+                }
+            }
+    
+            &__name{
                 cursor: pointer;
+                &:hover{
+                    text-decoration: underline;
+                    color: var(--app-blue-color);
+                }
             }
         }
 
-        &__name{
-            cursor: pointer;
-            &:hover{
-                text-decoration: underline;
-                color: var(--app-blue-color);
-            }
+        &__node-actions{
+            border-radius: 10px;
         }
     }
 
