--- a/src/app/components/movie-tree/movie-tree.component.html
+++ b/src/app/components/movie-tree/movie-tree.component.html
@@ -6,7 +6,7 @@
     }
   </div>
   <div class="movie-tree__add-node">
-    <input class="movie-tree__add-node__top" placeholder="Add new node..."  [(ngModel)]="newNodeName"/>
+    <input class="top" placeholder="Add new node..."  [(ngModel)]="newNodeName"/>
     <button (click)="addNode(newNodeName)">Add Node</button>
 </div>
 </div>
