--- a/src/app/components/movie-tree/movie-tree.component.scss
+++ b/src/app/components/movie-tree/movie-tree.component.scss
@@ -38,4 +38,13 @@
             flex-direction: column;
         }
     }
+
+    &__add-node{
+        display: flex;
+        gap: 0.4rem;
+
+        .top{
+            border-radius: 10px;
+        }
+    }
 }
