--- a/src/styles.scss
+++ b/src/styles.scss
@@ -89,12 +89,13 @@ p {
     display: inline-flex;
     align-items: center;
     padding: 8px 16px;
-    border-radius: 2px;
+    border-radius: 10px;
     font-size: 14px;
     cursor: pointer;
     background-color: var(--app-blue-color);
     color: var(--app-font-white-pure-color);
     border: none;
+    height: 2.2rem;
   }
   
   .button:hover, button:hover {
