added a new field "level" to set a different icon in each level. Did some improvements by creating a custom tree without data and some little adjustments

--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,4 +1,5 @@
 <a [routerLink]="['/']">
     <h1>Catalogue Library</h1>
 </a>
-<a class="button fancy-button"><i class="material-icons">logout</i>Logout</a>
+<a href="https://github.com/Isaacgc1999" class="button fancy-button"><i class="material-icons">link</i>By Isaac García</a>
+<!-- <a class="button fancy-button"><i class="material-icons">logout</i>Logout</a> -->
