--- a/src/app/components/movie-tree/movie-tree.component.html
+++ b/src/app/components/movie-tree/movie-tree.component.html
@@ -1,12 +1,28 @@
 <div class="movie-tree">
-  <input class="movie-tree__top" placeholder="Search movie..."  [(ngModel)]="searchQuery"/>
-  <div class="movie-tree__body">
-    @for(movie of filterCatalogue; track movie.id) {
-      <app-movie-tree-node [data]="movie" [completeNode]="moviesWithTree" (removeNode)="removeNode($event)"></app-movie-tree-node>
-    }
+  <div class="movie-tree__example">
+    <div class="movie-tree__example__title">Example Tree</div>
+    <input class="movie-tree__example__top" placeholder="Search movie..."  [(ngModel)]="searchQuery"/>
+    <div class="movie-tree__example__body">
+      @for(movie of filterCatalogue; track movie.id) {
+        <app-movie-tree-node [data]="movie" [completeNode]="moviesWithTree" (removeNode)="removeNode($event)"></app-movie-tree-node>
+      }
+    </div>
+    <div class="movie-tree__example__add-node">
+      <input class="top" placeholder="Add new node..."  [(ngModel)]="newNodeName"/>
+      <button (click)="addNode(newNodeName, moviesWithTree)">Add Node</button>
+    </div>
   </div>
-  <div class="movie-tree__add-node">
-    <input class="top" placeholder="Add new node..."  [(ngModel)]="newNodeName"/>
-    <button (click)="addNode(newNodeName)">Add Node</button>
-</div>
+  <div class="movie-tree__custom">
+    <div class="movie-tree__custom__title">Custom Tree</div>
+    <input class="movie-tree__custom__input" placeholder="Search movie..."  [(ngModel)]="searchQuery2"/>
+    <div class="movie-tree__custom__body">
+      @for(movie of filterCustomCatalogue; track movie.id) {
+        <app-movie-tree-node [data]="movie" [completeNode]="moviesWithTree2" (removeNode)="removeNode($event)"></app-movie-tree-node>
+      }
+      <div class="movie-tree__custom__body__add">
+        <input class="top" placeholder="Add new node..."  [(ngModel)]="newNodeName2"/>
+        <button (click)="addNode(newNodeName2, moviesWithTree2)">Add Node</button>
+      </div>
+    </div>
+  </div>
 </div>
