--- a/src/app/components/movie-tree/movie-tree.component.scss
+++ b/src/app/components/movie-tree/movie-tree.component.scss
@@ -1,50 +1,95 @@
 .movie-tree{
     display: flex;
-    flex-direction: column;
-    gap: 0.6rem;
+    justify-content: space-around;
 
-    &__top{
-        width: 10rem;
-        font-size: 13px;
-        border-radius: 10px;
-        padding: 12px;
-        margin-bottom: 16px;
-        border: 1px solid var(--app-font-white-pure-color);
-        color: var(--app-font-grey-color);
+    &__example{
+        display: flex;
+        flex-direction: column;
+        gap: 0.6rem;
 
-        :focus-visible :focus{
-            outline: none !important;
-            border: none !important;
-            box-shadow: none !important;
+        &__top{
+            font-size: 13px;
+            border-radius: 10px;
+            padding: 12px;
+            margin-bottom: 16px;
+            border: 1px solid var(--app-font-white-pure-color);
+            color: var(--app-font-grey-color);
+    
+            :focus-visible :focus{
+                outline: none !important;
+                border: none !important;
+                box-shadow: none !important;
+            }
+        }
+    
+        &__body{
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+    
+            &__title{
+                display: flex;
+                align-items: center;
+                gap: 0.4rem;
+    
+                i{
+                    cursor: pointer;
+                }
+            }
+            &__body{
+                display: flex;
+                flex-direction: column;
+            }
+        }
+    
+        &__add-node{
+            display: flex;
+            gap: 0.4rem;
+    
+            .top{
+                border-radius: 10px;
+            }
         }
     }
 
-    &__body{
+    &__custom{
         display: flex;
         flex-direction: column;
-        gap: 1rem;
-
+        gap: 0.6rem;
         &__title{
             display: flex;
             align-items: center;
             gap: 0.4rem;
-
-            i{
-                cursor: pointer;
+        }
+        &__input{
+            font-size: 13px;
+            border-radius: 10px;
+            padding: 12px;
+            margin-bottom: 16px;
+            border: 1px solid var(--app-font-white-pure-color);
+            color: var(--app-font-grey-color);
+    
+            :focus-visible :focus{
+                outline: none !important;
+                border: none !important;
+                box-shadow: none !important;
             }
         }
         &__body{
             display: flex;
             flex-direction: column;
+            gap: 0.4rem;
+    
+            .top{
+                border-radius: 10px;
+            }
+
+            &__add{
+                display: flex;
+                gap: 0.4rem;
+            }
         }
     }
 
-    &__add-node{
-        display: flex;
-        gap: 0.4rem;
-
-        .top{
-            border-radius: 10px;
-        }
-    }
+    
 }
