--- a/src/app/components/movie-tree/movie-tree.component.html
+++ b/src/app/components/movie-tree/movie-tree.component.html
@@ -4,12 +4,8 @@
     <input class="movie-tree__example__top" placeholder="Search movie..."  [(ngModel)]="searchQuery"/>
     <div class="movie-tree__example__body">
       @for(movie of filterCatalogue; track movie.id) {
-        <app-movie-tree-node [data]="movie" [completeNode]="moviesWithTree" (removeNode)="removeNode($event)"></app-movie-tree-node>
+        <app-movie-tree-node [data]="movie" [isExample]="true" [completeNode]="moviesWithTree" ></app-movie-tree-node>
       }
-    </div>
-    <div class="movie-tree__example__add-node">
-      <input class="top" placeholder="Add new node..."  [(ngModel)]="newNodeName"/>
-      <button (click)="addNode(newNodeName, moviesWithTree)">Add Node</button>
     </div>
   </div>
   <div class="movie-tree__custom">
@@ -17,7 +13,7 @@
     <input class="movie-tree__custom__input" placeholder="Search movie..."  [(ngModel)]="searchQuery2"/>
     <div class="movie-tree__custom__body">
       @for(movie of filterCustomCatalogue; track movie.id) {
-        <app-movie-tree-node [data]="movie" [completeNode]="moviesWithTree2" (removeNode)="removeCustomNode($event)"></app-movie-tree-node>
+        <app-movie-tree-node [data]="movie" [isExample]="false" [completeNode]="moviesWithTree2" (removeNode)="removeCustomNode($event)"></app-movie-tree-node>
       }
       <div class="movie-tree__custom__body__add">
         <input class="top" placeholder="Add new node..."  [(ngModel)]="newNodeName2"/>
