--- a/src/app/components/movie-tree-node/movie-tree-node.component.html
+++ b/src/app/components/movie-tree-node/movie-tree-node.component.html
@@ -7,7 +7,10 @@
             </div>        
             <i class="material-icons">{{ data.icon }}</i>
         </div>
-        <button class="movie-tree-node__group__node-actions" (click)="deleteNode()">Delete</button>
+        <ng-container *appShowIfIsNotExample="isExample">
+
+            <button class="movie-tree-node__group__node-actions" (click)="deleteNode()">Delete</button>
+        </ng-container>
     </div>
     @if(isExpanded){
         @if(data.node && data.node.length > 0){
@@ -15,10 +18,11 @@
                 <app-movie-tree-node
                 *ngFor="let child of data.node"
                 [data]="child"
+                [isExample]="isExample"
                 (removeNode)="onChildRemove($event)">
                 </app-movie-tree-node>
             </div>
-            <div class="movie-tree-node__add-node">
+            <div class="movie-tree-node__add-node" *appShowIfIsNotExample="isExample">
                 <input class="top" placeholder="Add new node..."  [(ngModel)]="newNodeName"/>
                 <button (click)="addNode(newNodeName)" width="">Add Node</button>
             </div>
@@ -27,7 +31,7 @@
             <div class="movie-tree-node__node-children">
                 No data
             </div>
-            <div class="movie-tree-node__add-node">
+            <div class="movie-tree-node__add-node" *appShowIfIsNotExample="isExample">
                 <input class="top" placeholder="Add new node..."  [(ngModel)]="newNodeName"/>
                 <button (click)="addNode(newNodeName)">Add Node</button>
             </div>
