--- a/src/app/components/movie-tree-node/movie-tree-node.component.scss
+++ b/src/app/components/movie-tree-node/movie-tree-node.component.scss
@@ -50,6 +50,7 @@
         display: flex;
         gap: 0.4rem;
         padding-left: 1rem;
+        align-items: center;
 
         .top{
             border-radius: 10px;;
